--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -8,20 +8,57 @@
         </button>
       </div>
       <div class="modal-body">
-        <form>
+        <form #formBook="ngForm" (ngSubmit)="onSaveBook(formBook)">
+          <input type="text" name="bookId">
           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Recipient:</label>
-            <input type="text" class="form-control" id="recipient-name">
+            <label for="titulo" class="col-form-label">Titulo:</label>
+            <input type="text" class="form-control" name="titulo" [(ngModel)]="this.dataApi.selectedBook.titulo">
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="idioma">Idioma</label>
+              <select class="form-control" name="idioma" [(ngModel)]="this.dataApi.selectedBook.idioma">
+                <option value="ingles">Ingles</option>
+                <option value="castellano">Castellano</option>
+              </select>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="precio">Precio</label>
+              <input type="text" name="precio" class="form-control" placeholder="0.00$" [(ngModel)]="this.dataApi.selectedBook.precio">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="autor">Autor</label>
+              <input type="text" name="autor" class="form-control" placeholder="Autor" [(ngModel)]="this.dataApi.selectedBook.autor">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="oferta">Oferta</label>
+              <select class="form-control" name="oferta" [(ngModel)]="this.dataApi.selectedBook.oferta">
+                <option value="1">SI</option>
+                <option value="0">NO</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="portada"></label>
+              <input type="text" name="portada" class="form-control" placeholder="Portada" [(ngModel)]="this.dataApi.selectedBook.portada">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="link_amazon"></label>
+              <input type="text" name="link_amazon" class="form-control" placeholder="Link amazon" [(ngModel)]="this.dataApi.selectedBook.link_amazon">
+            </div>
           </div>
           <div class="form-group">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
+            <label for="descripcion" class="col-form-label">Descripcion:</label>
+            <textarea class="form-control" name="descripcion" [(ngModel)]="this.dataApi.selectedBook.descripcion"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save Book</button>
           </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
       </div>
     </div>
   </div>
