Cambios en listBooks_html
- Se añadió condicional para si/no.
- Se añadió un data toggle para llamada de modal en el método Update.
- Se bindeo el método Delete.

--- a/src/app/components/admin/list-books/list-books.component.html
+++ b/src/app/components/admin/list-books/list-books.component.html
@@ -21,12 +21,12 @@
 					<td>{{book.autor}}</td>
 					<td>{{book.idioma}}</td>
 					<td>{{book.precio}}</td>
-					<td>{{book.oferta}}</td>
+					<td>{{book.oferta == 1 ? 'Sí' : 'No' }}</td>
 					<td>
-						<button class="btn btn-primary">Update</button>
+						<button class="btn btn-primary" data-toggle="modal" data-target="#modalBook" (click)="onPreUpdateBook(book)">Update</button>
 					</td>
 					<td>
-						<button class="btn btn-danger">Delete</button>
+						<button class="btn btn-danger" (click)="onDeleteBook(book.id)">Delete</button>
 					</td>
 				</tr>
 			</tbody>
