--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -2,14 +2,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <h5 class="modal-title" id="exampleModalLabel">
+          {{ !this.dataApi.selectedBook.id ? 'New Book' : 'Update Book' }}
+        </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <form #formBook="ngForm" (ngSubmit)="onSaveBook(formBook)">
-          <input type="text" name="bookId">
+          <input type="hidden" name="id" [(ngModel)]="this.dataApi.selectedBook.id">
           <div class="form-group">
             <label for="titulo" class="col-form-label">Titulo:</label>
             <input type="text" class="form-control" name="titulo" [(ngModel)]="this.dataApi.selectedBook.titulo">
@@ -35,18 +37,18 @@
             <div class="form-group col-md-6">
               <label for="oferta">Oferta</label>
               <select class="form-control" name="oferta" [(ngModel)]="this.dataApi.selectedBook.oferta">
-                <option value="1">SI</option>
-                <option value="0">NO</option>
+                <option value="1">Sí</option>
+                <option value="0">No</option>
               </select>
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
-              <label for="portada"></label>
+              <label for="portada">Portada</label>
               <input type="text" name="portada" class="form-control" placeholder="Portada" [(ngModel)]="this.dataApi.selectedBook.portada">
             </div>
             <div class="form-group col-md-6">
-              <label for="link_amazon"></label>
+              <label for="link_amazon">Link Amazon</label>
               <input type="text" name="link_amazon" class="form-control" placeholder="Link amazon" [(ngModel)]="this.dataApi.selectedBook.link_amazon">
             </div>
           </div>
@@ -55,7 +57,7 @@
             <textarea class="form-control" name="descripcion" [(ngModel)]="this.dataApi.selectedBook.descripcion"></textarea>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" #btnClose>Close</button>
             <button type="submit" class="btn btn-primary">Save Book</button>
           </div>
         </form>
