--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -5,7 +5,7 @@
         <h5 class="modal-title" id="exampleModalLabel">
           {{ !this.dataApi.selectedBook.id ? 'New Book' : 'Update Book' }}
         </h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="onCloseModal(formBook)">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -58,7 +58,7 @@
             <textarea class="form-control" name="descripcion" [(ngModel)]="this.dataApi.selectedBook.descripcion"></textarea>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" #btnClose>Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" #btnClose (click)="onCloseModal(formBook)">Close</button>
             <button type="submit" class="btn btn-primary">Save Book</button>
           </div>
         </form>
